--- a/workflow_node2.yaml
+++ b/workflow_node2.yaml
@@ -1,10 +1,10 @@
 apiVersion: "tinkerbell.org/v1alpha1"
 kind: Workflow
 metadata:
-  name: clearnode2
+  name: ubuntunode2
   namespace: tink-system
 spec:
-  templateRef: clear37710
+  templateRef: ubuntu2204
   hardwareRef: node2
   hardwareMap:
     device_1: 40:a6:b7:2d:ed:c4
