--- a/pod15node2.yaml
+++ b/pod15node2.yaml
@@ -17,9 +17,9 @@ spec:
       hostname: "node2"
       id: "40:a6:b7:2d:ed:c4"
       operating_system:
-        distro: "clear"
-        os_slug: "clear37710"
-        version: "37710"
+        distro: "ubuntu"
+        os_slug: "ubuntu2204"
+        version: "2204"
   interfaces:
     - dhcp:
         arch: x86_64
