--- a/pod15node2.yaml
+++ b/pod15node2.yaml
@@ -17,7 +17,7 @@ spec:
       hostname: "node2"
       id: "40:a6:b7:2d:ed:c4"
       operating_system:
-        distro: "ubuntu"
+        distro: "ubuntu2204"
         os_slug: "ubuntu2204"
         version: "2204"
   interfaces:
